organised the modules

--- a/test.ipynb
+++ b/test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import Generator, Discriminator\n",
+    "from models.model import Generator, Discriminator\n",
     "from torchvision.utils import save_image\n",
     "import config\n",
     "from utils import load_checkpoint\n",
@@ -67,11 +67,8 @@
    ],
    "source": [
     "load_checkpoint(\n",
-    "            \"models_32_25_epoch\\generator.pth\", gen, opt_gen, config.LEARNING_RATE,\n",
-    "        )\n",
-    "load_checkpoint(\n",
-    "            \"models_64_epochs\\/21\\generator (18).pth\", gen2, opt_gen2, config.LEARNING_RATE,\n",
-    "        )"
+    "            \"backend\\generator-HQ-5-final-4.pth\", gen, opt_gen, config.LEARNING_RATE,\n",
+    "        )\n"
    ]
   },
   {
